# toolplane

./: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  code-mode-backends.md  configuration.md  index.md  toolplane-mcp.md
docs/development/: release-checklist.md
docs/examples/: ambient-cli.md  index.md  mcp-tools.md
docs/stylesheets/: extra.css
examples/: README.md  ambient_cli_git.py  context7_remote.py  fastmcp_in_process.py  from_config.py  mcp_stdio_config.py  mcp_stdio_server.py  mixed_capability_report.py  scoped_namespaces_context7.py
src/toolplane/: __init__.py  capabilities.py  config.py  discovery.py  errors.py  execution.py  registry.py  runtime.py
src/toolplane/adapters/: __init__.py  ambient_cli.py  cli_to_py.py  mcp.py  python.py
src/toolplane/backends/: __init__.py  _python.py  base.py  local.py  pyodide_deno.py
src/toolplane/bridges/: __init__.py  base.py  in_process.py  rpc.py
tests/: test_ambient_cli.py  test_bridges.py  test_cli_to_py_adapter.py  test_config.py  test_mcp_adapter.py  test_pyodide_deno_backend.py  test_toolplane.py
