[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolplane"
version = "0.1.0"
description = "A controlled Python code-mode runtime for programmable tool surfaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agents", "code-mode", "tools", "mcp", "cli", "runtime"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cli-to-py>=0.1",
    "fastmcp>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toolplane"]
